--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "ext-gd": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^6.0 || ^7.0",
         "friendsofphp/php-cs-fixer": "^2.10"
     },
     "autoload": {
