--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^7.1",
         "ext-gd": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0 || ^7.0",
+        "phpunit/phpunit": "^7.0",
         "friendsofphp/php-cs-fixer": "^2.10"
     },
     "autoload": {
